[project]
name = "vmilog"
version = "0.0.1"
authors = [
  { name="Kai.Zhou", email="zeekzhou@163.com" },
]
description = "Log package"
readme = "README.md"
requires-python = ">=3.6 "
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/openvmi/vmilog-py"
"Bug Tracker" = "https://github.com/openvmi/vmilog-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"